Bug #16753 DD: mysqldump does not support Cluster Disk Data backups
Submitted: 24 Jan 2006 18:45 Modified: 2 Feb 2006 13:37
Reporter: Jonathan Miller
Status: Closed
Category:Server: Cluster Severity:S2 (Serious)
Version:5.1.6-alpha OS:Linux (Linux)
Assigned to: Tomas Ulin Target Version:

[24 Jan 2006 18:45] Jonathan Miller
Description:
using mysqldump --all-databases

Shows:
--
-- Table structure for table `t1`
--

DROP TABLE IF EXISTS `t1`;
CREATE TABLE `t1` (
  `pk1` mediumint(9) NOT NULL auto_increment,
  `c2` text NOT NULL,
  `c3` int(11) NOT NULL,
  `c4` bit(1) NOT NULL,
  PRIMARY KEY  (`pk1`)
) ENGINE=ndbcluster DEFAULT CHARSET=latin1 PARTITION BY KEY () ;

--
-- Dumping data for table `t1`
--

SQL used to create test.t1:

CREATE LOGFILE GROUP log_group1
ADD UNDOFILE './log_group1/undofile.dat'
INITIAL_SIZE 16M
UNDO_BUFFER_SIZE = 1M
ENGINE=NDB;

CREATE TABLESPACE table_space1
ADD DATAFILE './table_space1/datafile.dat'
USE LOGFILE GROUP log_group1
INITIAL_SIZE 12M
ENGINE NDB;

CREATE TABLE test.t1
(pk1 MEDIUMINT NOT NULL AUTO_INCREMENT PRIMARY KEY, c2 TEXT NOT NULL, c3 INT NOT NULL, c4
BIT NOT NULL) TABLESPACE table_space1 STORAGE DISK ENGINE=NDB;

How to repeat:
see above

Suggested fix:
mysqldump should support disk data with drops, creates and alters included.
[26 Jan 2006 10:00] Tomas Ulin
ndb backup and restore exists as a workaround so not "critical"
[26 Jan 2006 12:41] Jonathan Miller
I disagree. We are suppose to support mysqldump.
[1 Feb 2006 23:58] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/2034
[2 Feb 2006 10:01] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/2049
[2 Feb 2006 10:40] Tomas Ulin
pushed to 5.1.6, no need do doc the bug, but

but

mysqldump has new switch:

  -Y, --all-tablespaces 
                      Dump all the tablespaces.

default is false
[2 Feb 2006 13:37] Jon Stephens
Thank you for your bug report. This issue has been addressed in the
documentation. The updated documentation will appear on our website
shortly, and will be included in the next release of the relevant
product(s).

Additional info:

Documented feature in 5.1.6 changelog and mysqldump section of 5.1 Manual.